# ict_auth

./: .gitignore  README.md  build.sh  frpc_install.sh  ict_auth.sh  pack.sh  package.sh  pyproject.toml  test.py  update.sh
.github/workflows/: build.yml  build_test_publish.yml  build_test_release.yml  frpc.yml  upload.yml
ict_auth/: __init__.py  ci_test.py  cli.py  core.py  logger.py  service.py  systemd.py
src/: entry.sh  ict_auth-completion.bash  ict_auth.py  install.sh  service.py  setup.sh
